Phase 5: add role-based JWT support (extractRole, ROLE_ authorities, EnableMethodSecurity)